--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -4,7 +4,7 @@
 
 /* Extracting components */
 .Card {
-  @apply snap-center w-64 h-80 shrink-0 shadow-md rounded-lg overflow-hidden
+  @apply snap-center w-64 h-80 my-2 shrink-0 shadow-md rounded-lg overflow-hidden
 }
 
 .Green-shadow {
