--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -4,13 +4,13 @@
 
 /* Extracting components */
 .Card {
-  @apply snap-center w-64 h-80 my-2 shrink-0 shadow-md rounded-lg overflow-hidden
+  @apply snap-center w-64 h-80 my-2 shrink-0 shadow-md rounded-lg overflow-hidden transform transition-all duration-300 hover:-translate-y-4 hover:shadow-lg
 }
 
 .Green-shadow {
-  @apply shadow-lime-400
+  @apply shadow-lime-300 hover:shadow-lime-500
 }
 
 .Blue-shadow {
-  @apply shadow-sky-300
+  @apply shadow-sky-300 hover:shadow-sky-500
 }
